Fix spacing issue on nav.

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -163,6 +163,10 @@ nav ul li {
     margin: 0 15px;
 }
 
+    nav .subnav li {
+        margin: 0 10px;
+    }
+
 nav ul > li:first-child {
     margin-left: 0;
 }
